fix schedule table

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Advanced LSSS and acoustics"
+title: "Training course in acoustics --- EK80 basic use and LSSS introduction"
 subtitle: "3 day workshop at Hafró/MFRI in preparation for the capelin surveys"
 ---
 
@@ -13,31 +13,31 @@ subtitle: "3 day workshop at Hafró/MFRI in preparation for the capelin surveys"
 
 ------------------------------------------------------------------------
 
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-| Date       | Time        | Lead                                            | Topics                                                            |        |
-+============+=============+=================================================+===================================================================+========+
-| 2025-12-03 | 9-10        | TS, SÞj                                         | Basic acoustic theory\                                            |        |
-|            |             |                                                 | Importance of calibration                                         |        |
-|            |             |                                                 |                                                                   |        |
-|            |             |                                                 | EK80 software overview                                            |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-|            | 10-12       | BS,TS, SÞJ, SÁ                                  | Hands-on on-board ÁF                                              |        |
-|            |             |                                                 |                                                                   |        |
-|            |             |                                                 | EK80,Open CPN, Sonar and ADCP                                     |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-| 2025-12-04 | 9:00-9:30   | SÞJ\                                            | Presentation of results from capelin survey double coverage 2025\ |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-|            | 9:30-10:30  | SÞJ ,SG                                         | Sonar and Scanmar/Marport data\                                   |        |
-|            |             |                                                 | ICES metadata, EK80 processed data                                |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-|            | 10:30-12:00 | SÞJ, TS                                         | Installation of LSSS and start survey scrutinizations             |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-|            | 13-16       | TS, SÞJ                                         | (OPTIONAL) Pratical scrutinization                                |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-| 2025-12-05 | 9:00-9:30   | TS                                              | Presentation: When to sample during the capelin surveys!          |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
-|            | 9:30-12:00  | TS, SÞJ \| Continuation with the scrutinization |                                                                   |        |
-+------------+-------------+-------------------------------------------------+-------------------------------------------------------------------+--------+
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+| Date           | Time          | Lead                                  | Topics                                                            |
++================+===============+=======================================+===================================================================+
+| 2025-12-03     | 9--10         | TS, SÞj                               | Basic acoustic theory \                                           |
+|                |               |                                       | Importance of calibration                                         |
+|                |               |                                       |                                                                   |
+|                |               |                                       | EK80 software overview                                            |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+|                | 10--12        | BS,TS, SÞJ, SÁ                        | Hands-on on-board ÁF                                              |
+|                |               |                                       |                                                                   |
+|                |               |                                       | EK80, Open CPN, Sonar and ADCP                                    |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+| 2025-12-04     | 9--9:30       | SÞJ                                   | Presentation of results from capelin survey double coverage 2025  |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+|                | 9:30--10:30   | SÞJ ,SG                               | Sonar and Scanmar/Marport data \                                  |
+|                |               |                                       | ICES metadata, EK80 processed data                                |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+|                | 10:30--12     | SÞJ, TS                               | Installation of LSSS and start survey scrutinizations             |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+|                | 13--16        | TS, SÞJ                               | (OPTIONAL) Pratical scrutinization                                |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+| 2025-12-05     | 9--9:30       | TS                                    | Presentation: When to sample during the capelin surveys!          |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
+|                | 9:30--12      | TS, SÞJ                               | Scrutinization continued                                          |
++----------------+---------------+---------------------------------------+-------------------------------------------------------------------+
 
 : Schedule
 
