--- a/about.qmd
+++ b/about.qmd
@@ -16,7 +16,7 @@ We want you to have a working LSSS installation on your computer, and have a goo
 
 [**Teresa Silva**](http://heima.hafro.is/~teresa/) Teresa Sofia Giesta Da Silva holds a Ph.D. in biology and she is a research specialist in plankton and fisheries acoustics at the Marine Research and Freshwater Institute.
 
-![](images/stj_posit.JPEG){style="float:right;padding: 0 0 0 10px;" fig-alt="Headshot of Siggi" width="200"}
+![](images/sigurdur_thor_jonsson_k.jpg){style="float:right;padding: 0 0 0 10px;" fig-alt="Headshot of Siggi" width="200"}
 
 [**Sigurður Þór Jónsson**](http://heima.hafro.is/~sigurdur/) Fisheries biologist at Hafró from 1995, as research assisstant from 1988, cand. scient in fisheries biology from the University of Bergen in 1996. Involved with acoustics at Hafró since 1997.
 
